加音樂背景大魚小魚魚群,差任務排行榜元素

--- a/html/index.html
+++ b/html/index.html
@@ -156,6 +156,15 @@
                         <input type="range" id="musicVolume" min="0" max="100" value="30">
                         <span id="musicVolumeValue">30%</span>
                     </div>
+                    <div class="setting-item">
+                        <label>音效測試:</label>
+                        <div class="test-buttons">
+                            <button class="btn-test" onclick="testSound('shoot')">射擊</button>
+                            <button class="btn-test" onclick="testSound('catch')">捕魚</button>
+                            <button class="btn-test" onclick="testSound('special')">技能</button>
+                            <button class="btn-test" onclick="testBackgroundMusic()">背景音樂</button>
+                        </div>
+                    </div>
                 </div>
                 
                 <div class="settings-group">
